import "General.proto";

package pb_sa;
option java_package = "at.ac.tuwien.software.architectures.ws2012";


extend Request {
	optional RegisterPeerRequest register_peer_request=300;
	optional RegisterPeerResponse register_peer_response=301;
	optional BootstrapRequest bootstrap_request=302;
	optional BootstrapResponse bootstrap_response=303;
	optional PeerDeadRequest peer_dead_request=304;
	optional ValidateSearchRequest validate_search_request=305;
	optional ValidateSearchResponse validate_search_response=306;	
}

message RegisterPeerRequest {
     required string peer_address=1;
     required int32 client_id=2;
}

message RegisterPeerResponse {
     optional string peer_address =1;
     optional PeerRegistrationStatus status=2;
}

message BootstrapRequest {
     required int32 numberOfPeers =1;
}

message BootstrapResponse {
     repeated PeerData data=1;
}

message PeerDeadRequest {
     required string destination_peer=1;
}

message ValidateSearchRequest {
     required SearchRequest search_request=1;
}

message ValidateSearchResponse {
	 required ValidateSearchStatus search_status=1;
}


